# exploration-with-prior-information

./: README.md  acg-willow-husky.rviz  acg.rviz  basement_alignment.py
acg-workspace/src/graph_map_public/graph_localization/: CMakeLists.txt  Tutorial.md  package.xml
acg-workspace/src/graph_map_public/graph_localization/include/graph_localization/: localization_factory.h  localization_type.h  pose_queue.h
acg-workspace/src/graph_map_public/graph_localization/launch/: 2d_mcl_oru_lab.launch  localization.rviz  localization_arla.launch
acg-workspace/src/graph_map_public/graph_localization/rviz/: localization_arla.rviz  localization_oru_lab.rviz
acg-workspace/src/graph_map_public/graph_localization/rviz/private/: localization_michigan.rviz  localization_volvo.rviz
acg-workspace/src/graph_map_public/graph_localization/scripts/: graph_offline_mcl_arla2012  graph_offline_mcl_orkla  graph_offline_mcl_oru_lab  test_pose_queue
acg-workspace/src/graph_map_public/graph_localization/scripts/private/: graph_offline_mcl_hx  graph_offline_mcl_michigan
acg-workspace/src/graph_map_public/graph_localization/src/: graph_localization_node.cpp  graph_localization_node2.cpp  graph_localization_offline.cpp  localization_factory.cpp  localization_type.cpp  ndt_mcl_localization.cpp  pose_queue.cpp
acg-workspace/src/graph_map_public/graph_localization/src/mcl_ndt/: mcl_ndt.cpp
acg-workspace/src/graph_map_public/graph_localization/src/reg_localization_type/: reg_localization_type.cpp
acg-workspace/src/graph_map_public/graph_localization/test/: test_localization.cpp
acg-workspace/src/graph_map_public/graph_map/: CMakeLists.txt  Tutorial.md  package.xml
acg-workspace/src/graph_map_public/graph_map/include/graph_map/: factor.h  graph_map.h  graph_map_conversion.h  graph_map_fuser.h  graph_map_fuser_impl.h  graph_map_navigator.h  graph_plot.h  graphfactory.h  hierarchical_registration.h  map_node.h  map_type.h  reg_type.h  voxelgrid.h
acg-workspace/src/graph_map_public/graph_map/launch/: 2d_fuser_oru_example.launch  3d.rviz  3d_fuser_arla.launch  3d_fuser_arla_2012_juli.launch  3d_fuser_oru_basement.launch  basement_publisher.launch  publisher.launch  publisher_dortmund_laser.launch  showMap.launch  showMap.rviz  visualize_graph_fuser.launch
acg-workspace/src/graph_map_public/graph_map/msg/: FactorMsg.msg  GraphMapMsg.msg  NodeMsg.msg
acg-workspace/src/graph_map_public/graph_map/rviz/: mapping.rviz  mapping_arla_2012.rviz  mapping_oru_field.rviz  mapping_oru_lab.rviz  showMap.rviz
acg-workspace/src/graph_map_public/graph_map/rviz/private/: mapping_volvo_2017_12_01.rviz  michigan.rviz
acg-workspace/src/graph_map_public/graph_map/scripts/: calibration_arla2012  calibration_coop_2013  calibration_volvo2017_12_01  graph_offline_imu_oru_field  graph_offline_mapping_arla2012  graph_offline_mapping_orkla  graph_offline_oru_lab
acg-workspace/src/graph_map_public/graph_map/scripts/private/: graph_offline_mapping_hx  graph_offline_mapping_michigan
acg-workspace/src/graph_map_public/graph_map/src/: graph_map_fuser.cpp  graph_map_fuser_node.cpp  graph_map_publisher.cpp  graph_map_publisher_localization.cpp  graph_mapping_offline.cpp  graphfactory.cpp  ndt_map_publisher_mcl_test.cpp  show_map.cpp  test_integration.cpp
acg-workspace/src/graph_map_public/graph_map/src/graph_map/: factor.cpp  graph_map.cpp  graph_map_navigator.cpp  hierarchical_registration.cpp  map_node.cpp  map_type.cpp  reg_type.cpp  voxelgrid.cpp
acg-workspace/src/graph_map_public/graph_map/src/lidarUtils/: lidar_utilities.cpp
acg-workspace/src/graph_map_public/graph_map/src/narf/: narf_map_type.cpp  narf_reg_type.cpp
acg-workspace/src/graph_map_public/graph_map/src/ndt/: ndt_map_param.cpp  ndt_map_type.cpp  ndtd2d_reg_type.cpp
acg-workspace/src/graph_map_public/graph_map/src/ndt_dl/: ndtdl_map_param.cpp  ndtdl_map_type.cpp  ndtdl_reg_type.cpp
acg-workspace/src/graph_map_public/graph_map/src/octomap/: octomap_map_type.cpp
acg-workspace/src/graph_map_public/graph_map/src/template/: template_map_type.cpp  template_reg_type.cpp
acg-workspace/src/graph_map_public/graph_map/src/visualization/: graph_plot.cpp
acg-workspace/src/graph_map_public/graph_map/test/: test_graph.cpp  test_grid.cpp  test_particle_filter.cpp  test_serialization.cpp  test_simple.cpp
acg-workspace/src/ndt_core/ndt_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
acg-workspace/src/ndt_core/ndt_generic/: CHANGELOG.rst  CMakeLists.txt
acg-workspace/src/ndt_core/ndt_generic/include/ndt_generic/: eigen_utils.h  io.h  motion_model_2d.h  motion_model_3d.h  motionmodels.h  pcl_utils.h  pcl_utils_impl.h  sensors_utils.h  serialization.h  utils.h
acg-workspace/src/ndt_core/ndt_generic/src/: eigen_utils.cpp  io.cpp  motion_model_3d.cpp  pcl_utils.cpp  sensors_utils.cpp  utils.cpp
acg-workspace/src/ndt_core/ndt_registration/: CHANGELOG.rst  CMakeLists.txt  package.xml
acg-workspace/src/ndt_core/ndt_registration/include/ndt_registration/: ndt_matcher_d2d.h  ndt_matcher_d2d_2d.h  ndt_matcher_d2d_sc.h  registration.h  (+1 more)
acg-workspace/src/ndt_core/ndt_registration/src/: ndt_matcher_d2d.cpp  ndt_matcher_d2d_2d.cpp  ndt_matcher_d2d_sc.cpp  ndt_matcher_d2d_sc_2d.cpp
acg-workspace/src/ndt_core/ndt_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
acg-workspace/src/ndt_core/ndt_rviz/src/: ndt_display.cpp  ndt_line_display.cpp  ndt_line_visual.cpp  ndt_rviz.cpp  ndt_vector_display.cpp  ndt_visual.cpp  utils.cpp
acg-workspace/src/ndt_tools/ndt_offline/: CHANGELOG.rst  CMakeLists.txt  package.xml
acg-workspace/src/ndt_tools/ndt_offline/launch/: bag_file_view.launch  coop.rviz  excavator_laps.rviz  kitti.rviz  offline_graph_vis.rviz  show_bag.rviz
acg-workspace/src/ndt_tools/ndt_offline/src/: bag_converter.cpp  gps_test.cpp  graph_mapping_offline2.cpp  imu_prediction.cpp  mcl_offline.cpp  narf_test.cpp  readpointcloud.cpp  tf_writer.cpp  view_ndtmap.cpp
acg-workspace/src/ndt_tools/ndt_offline/test/: test_read_bag  test_reader.cpp
acg-workspace/src/ndt_tools/ndt_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+189 files in other folders)
