<?xml version="1.0"?>
<package format="2">
  <name>ndt_tools</name>
  <version>2.0.1</version>
  <description>The ndt_tools package</description>

  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>
  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="martin.magnusson@oru.se">Martin Magnusson</maintainer>
  
  <license>CC BY-SA 4.0</license>

  <author>Henrik Andreasson</author>
  <author>Todor Stoyanov</author>
  <author>Jari Saarinen</author>
  <author>Tomasz Kucner</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- exec_depend>ndt_calibration</exec_depend -->
  <exec_depend>ndt_feature_finder</exec_depend>
  <exec_depend>ndt_localization</exec_depend>
  <exec_depend>ndt_offline</exec_depend>
  <exec_depend>ndt_fuser</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
